DROP TABLE "Planned_Flights_Pilots" IF EXISTS;
DROP TABLE "Planned_Flights" IF EXISTS;
DROP TABLE "Pilots" IF EXISTS;
DROP TABLE "Airports" IF EXISTS;
DROP TABLE "Airplanes" IF EXISTS;

CREATE TABLE "Airplanes" (
    "Id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Capacity" INTEGER NOT NULL,
    CONSTRAINT "Airplanes_Capacity_Check" CHECK ("Capacity" > 5 AND "Capacity" < 300)
);

CREATE TABLE "Airports" (
    "Id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Country" VARCHAR(40) NOT NULL,
    "City" VARCHAR(60) NOT NULL,
    CONSTRAINT "Airports_Country_Check" CHECK (
        CHAR_LENGTH("Country") > 1 AND
        LOWER("Country") != UPPER("Country") AND
        "Country" NOT LIKE '-%' AND
        "Country" NOT LIKE '%-'
    ),
    CONSTRAINT "Airports_City_Check" CHECK (
        CHAR_LENGTH("City") > 2 AND
        LOWER("City") != UPPER("City") AND
        "City" NOT LIKE '-%' AND
        "City" NOT LIKE '%-'
    )
);

CREATE TABLE "Pilots" (
    "Id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "First_Name" VARCHAR(30) NOT NULL,
    "Last_Name" VARCHAR(60) NOT NULL,
    "Phone" VARCHAR(16) NOT NULL,
    "Email" VARCHAR(60) NOT NULL,
    "Birth_Date" DATE NOT NULL,
    "Employment_Date" DATE NOT NULL,
    CONSTRAINT "Pilots_First_Name_Check" CHECK (
        CHAR_LENGTH("First_Name") > 1 AND
        LOWER("First_Name") != UPPER("First_Name") AND
        "First_Name" NOT LIKE '-%' AND
        "First_Name" NOT LIKE '%-'
    ),
    CONSTRAINT "Pilots_Last_Name_Check" CHECK (
        CHAR_LENGTH("Last_Name") > 1 AND
        LOWER("Last_Name") != UPPER("Last_Name") AND
        "Last_Name" NOT LIKE '-%' AND
        "Last_Name" NOT LIKE '%-'
    ),
    CONSTRAINT "Pilots_Phone_Check" CHECK (
        LENGTH("Phone") > 6 AND
        LOWER("Phone") = UPPER("Phone")
    ),
    CONSTRAINT "Pilots_Email_Check" CHECK (
        CHAR_LENGTH("Email") > 3 AND
        LOWER("Email") = "Email"
    ),
    CONSTRAINT "Pilots_Birth_Date_Employment_Date_Check" CHECK (
        "Birth_Date" < "Employment_Date" AND
        DATEDIFF('year', "Birth_Date", "Employment_Date") <= DATEDIFF('year', "Birth_Date", CURRENT_DATE) AND
        DATEDIFF('year', "Birth_Date", CURRENT_DATE) >= 18
    )
);

CREATE TABLE "Planned_Flights" (
    "Id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Departure_At" DATETIME NOT NULL,
    "Arrival_At" DATETIME NOT NULL,
    "Airplanes_Id" INTEGER NOT NULL,
    "Airports_Departure_Id" INTEGER NOT NULL,
    "Airports_Destination_Id" INTEGER NOT NULL,
    CONSTRAINT "Planned_Flights_Departure_At_Arrival_At_Check" CHECK (
        "Departure_At" < "Arrival_At" AND
        "Departure_At" >= CURRENT_DATE
    ),
    CONSTRAINT "Planned_Flights_Airplanes_Id_Departure_At_AK" UNIQUE ("Airplanes_Id", "Departure_At"),
    CONSTRAINT "Planned_Flights_Airplanes_Id_Arrival_At_AK" UNIQUE ("Airplanes_Id", "Arrival_At"),
    CONSTRAINT "Planned_Flights_Airplanes_FK" FOREIGN KEY ("Airplanes_Id")
        REFERENCES "Airplanes" ("Id"),

    CONSTRAINT "Planned_Flights_Airports_Departure_FK" FOREIGN KEY ("Airports_Departure_Id")
        REFERENCES "Airports" ("Id"),

    CONSTRAINT "Planned_Flights_Airports_Destination_FK" FOREIGN KEY ("Airports_Destination_Id")
        REFERENCES "Airports" ("Id")
);

CREATE TABLE "Planned_Flights_Pilots" (
    "Id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Planned_Flights_Id" INTEGER NOT NULL,
    "Pilots_Id" INTEGER NOT NULL,
    CONSTRAINT "Planned_Flights_Pilots_Planned_Flights_Id_Pilots_Id_AK" UNIQUE ("Planned_Flights_Id", "Pilots_Id"),
    CONSTRAINT "Planned_Flights_Pilots_Planned_Flights_FK" FOREIGN KEY ("Planned_Flights_Id")
        REFERENCES "Planned_Flights" ("Id"),

    CONSTRAINT "Planned_Flights_Pilots_Pilots_FK" FOREIGN KEY ("Pilots_Id")
        REFERENCES "Pilots" ("Id")
);

